--- a/style-main.css
+++ b/style-main.css
@@ -152,6 +152,7 @@ header {
     height: 300px;
 }
 .store {
+    margin-top: 50px;
     padding-top: 5%;
     padding: 40px;
     background-color:var(--box_color);
