--- a/style-main.css
+++ b/style-main.css
@@ -1,11 +1,11 @@
 
 :root{
     --box_color:#efefef;
+    font-family:sans-serif;
 
 }
 h1{
     color: white;
-    font-family: 'Times New Roman', Times, serif;
     padding-left: 11%;
 }
 h2{
@@ -22,14 +22,17 @@ h2{
     height: 300px;
 }
 #buyErrors{
-    color:lightsalmon;
+    color:red;
 }
 #buyOk{
-    color:lightgreen;
+    color:green;
+    
 }
 .buyDiv{
     text-align: center;
     margin-top: 105px;
+    font-size: larger;
+    font-family:sans-serif;
 }
 .storeDiv{
     width: 400px;
@@ -62,16 +65,18 @@ h2{
     cursor: pointer;
     margin-top: 105px;
     margin-left: 95px;
+    font-size: 90%;
 }
 .repayButton{
     width: 100px;
     height: 30px;
-    background-color: lightgreen;
+    background-color: #B8D5B3;
     border-radius: 10px;
-    border-color:lightgreen;
+    border-color:#B8D5B3;
     border-width: 1px;
     cursor: pointer;
     margin-left: 90px;
+    font-size: 90%;
 }
 .payButton {
     width: 100px;
@@ -81,6 +86,8 @@ h2{
     border-color:lightyellow;
     border-width: 1px;
     cursor: pointer;
+    font-size: 90%;
+
 }
 .workButton {
     width: 100px;
@@ -90,16 +97,18 @@ h2{
     border-color:lightblue;
     border-width: 1px;
     cursor: pointer;
+    font-size: 90%;
 }
 .buyButton {
     margin-top: 15px;
     width: 100px;
     height: 30px;
-    background-color: lightgreen;
+    background-color: #B8D5B3;
     border-radius: 10px;
-    border-color:lightgreen;
+    border-color:#B8D5B3;
     border-width: 1px;
     cursor: pointer;
+    font-size: 90%;
 }
 
 
