--- a/style-main.css
+++ b/style-main.css
@@ -183,18 +183,20 @@ footer {
 
 }
 
-/*
-@media (max-width: 414px) {
+
+@media only screen and (max-width: 414px) {
     .grid {
         display: grid;
-        grid-auto-rows: minmax(auto, 414px);
+        grid-auto-rows: minmax(auto,100px);
         gap:1%
     }
     header {
         top: 0;
-        margin-top: 50%;
-        grid-column: 1;
+        left:0;
+        right: 0;
+        position: absolute;
         text-align: center;
+        width: 100%;
     
     }
     .bank {
@@ -205,6 +207,7 @@ footer {
         border-radius: 15px;
         padding: 40px;
         text-align: center;
+        width: 414px;
 
     }
     .work {
@@ -215,6 +218,7 @@ footer {
         padding: 40px;
         border-radius: 15px;
         text-align: center;
+        width: 414px;
 
     }
     .laptops {
@@ -225,6 +229,7 @@ footer {
         grid-row: 4;
         border-radius: 15px;
         text-align: center;
+        width: 414px;
 
     }
     .store {
@@ -236,6 +241,8 @@ footer {
         grid-row: 5/7;
         padding: 40px;
         border-radius: 15px;
+        width: 414px;
+        justify-content: space-evenly;
 
     }
     footer {
@@ -243,4 +250,4 @@ footer {
         grid-row: 8;
     
     }
-    }*/
+}
