--- a/style-main.css
+++ b/style-main.css
@@ -21,14 +21,11 @@ h2{
     width: 300px;
     height: 300px;
 }
-#buyErrors{
-    color:salmon;
-}
 .buyDiv{
     text-align: center;
     margin-top: 105px;
     font-size: larger;
-    font-family:sans-serif;
+    color: #50624d;
 }
 .storeDiv{
     width: 400px;
@@ -106,7 +103,9 @@ h2{
     cursor: pointer;
     font-size: 90%;
 }
-
+.featureList {
+    list-style:square;
+}
 
 .grid {
     display: grid;
